fixed maxbook's position not centered

--- a/src/css/feature-sections/info.scss
+++ b/src/css/feature-sections/info.scss
@@ -29,6 +29,10 @@
         }
     }
 
+    &__content{
+        @include position();
+    }
+
     &__cards {
         @include position();
         gap: 20px;
